--- a/daili.yaml
+++ b/daili.yaml
@@ -35,34 +35,34 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.34
-  maximum: 40.83
-  average: 40.07
-  UpdateDay: '2022-06-15T21:31:07.017843'
+  minimum: 42.97
+  maximum: 50.75
+  average: 46.79
+  UpdateDay: '2022-06-16T00:30:31.673295'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 44340
+  Rank: 44426
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 160.53
-  maximum: 1166.83
-  average: 497.52
-  UpdateDay: '2022-06-15T21:30:28.822075'
+  minimum: 95.96
+  maximum: 113.06
+  average: 106.61
+  UpdateDay: '2022-06-16T00:31:11.726265'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 40875
+  Rank: 40928
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -76,7 +76,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 40193
+  Rank: 40043
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -86,12 +86,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 87.5
-  maximum: 119.09
-  average: 104.55
-  UpdateDay: '2022-06-15T21:31:07.613917'
+  minimum: 105.02
+  maximum: 106.0
+  average: 105.56
+  UpdateDay: '2022-06-16T00:31:11.703358'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 34819
+  Rank: 34859
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -105,37 +105,37 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 34674
+  Rank: 34524
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.49
-  maximum: 52.33
-  average: 46.25
-  UpdateDay: '2022-06-15T21:30:27.493294'
+  minimum: 38.3
+  maximum: 38.84
+  average: 38.54
+  UpdateDay: '2022-06-16T00:31:11.270318'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 32892
+  Rank: 32994
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.11
-  maximum: 56.98
-  average: 47.84
-  UpdateDay: '2022-06-15T21:31:08.084320'
+  minimum: 45.49
+  maximum: 58.15
+  average: 51.92
+  UpdateDay: '2022-06-16T00:30:53.703645'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 31998
+  Rank: 32094
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 30872
+  Rank: 30962
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 30610
+  Rank: 30710
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 29408
+  Rank: 29458
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,37 +189,37 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 28872
+  Rank: 28922
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.71
-  maximum: 49.65
-  average: 44.13
-  UpdateDay: '2022-06-15T21:30:27.498572'
+  minimum: 38.9
+  maximum: 49.81
+  average: 43.56
+  UpdateDay: '2022-06-16T00:30:31.683724'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 23368
+  Rank: 23415
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 58.32
-  maximum: 70.35
-  average: 66.0
-  UpdateDay: '2022-06-15T21:31:07.432595'
+  minimum: 78.54
+  maximum: 80.83
+  average: 79.8
+  UpdateDay: '2022-06-16T00:31:11.440791'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 22190
+  Rank: 22225
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -229,12 +229,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.64
-  maximum: 45.85
-  average: 39.73
-  UpdateDay: '2022-06-15T21:31:07.329684'
+  minimum: 40.09
+  maximum: 44.63
+  average: 42.97
+  UpdateDay: '2022-06-16T00:31:11.283729'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 19397
+  Rank: 19474
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   type: trojan
@@ -244,12 +244,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 192.26
-  maximum: 201.99
-  average: 195.72
-  UpdateDay: '2022-06-15T21:30:49.835980'
+  minimum: 195.41
+  maximum: 204.04
+  average: 200.87
+  UpdateDay: '2022-06-16T00:30:57.314724'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 17364
+  Rank: 17415
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -259,27 +259,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.26
-  maximum: 1047.43
-  average: 375.05
-  UpdateDay: '2022-06-15T21:31:08.333918'
+  minimum: 38.31
+  maximum: 39.74
+  average: 38.79
+  UpdateDay: '2022-06-16T00:31:11.268730'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17196
+  Rank: 17242
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: share.mjj-home.com
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 147.23
-  maximum: 160.54
-  average: 152.35
-  UpdateDay: '2022-06-15T21:30:49.736666'
+  minimum: 168.35
+  maximum: 185.18
+  average: 177.97
+  UpdateDay: '2022-06-16T00:31:12.986805'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 16554
+  Rank: 16592
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -294,22 +294,22 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 16182
+  Rank: 16218
 - name: xioix.gq:443@trojan
   server: xioix.gq
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 9b7195ba-f029-4d7d-a728-ece6e0fdc363
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 195.99
-  maximum: 209.94
-  average: 201.9
-  UpdateDay: '2022-06-15T21:31:08.880916'
+  minimum: 327.26
+  maximum: 1336.87
+  average: 668.91
+  UpdateDay: '2022-06-16T00:30:55.861940'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
-  Rank: 15794
+  Rank: 15823
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -322,7 +322,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15782
+  Rank: 15632
 proxy-groups:
 - name: PG-default
   type: fallback
