--- a/daili.yaml
+++ b/daili.yaml
@@ -35,34 +35,34 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.27
-  maximum: 48.3
-  average: 45.18
-  UpdateDay: '2022-06-16T03:31:08.685782'
+  minimum: 22.95
+  maximum: 48.43
+  average: 38.15
+  UpdateDay: '2022-06-16T06:30:26.454941'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 44873
+  Rank: 44949
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.69
-  maximum: 65.64
-  average: 62.13
-  UpdateDay: '2022-06-16T03:31:10.262180'
+  minimum: 59.4
+  maximum: 63.34
+  average: 60.75
+  UpdateDay: '2022-06-16T06:30:26.643389'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 41335
+  Rank: 41436
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -76,22 +76,22 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 39293
+  Rank: 39143
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.97
-  maximum: 54.31
-  average: 52.81
-  UpdateDay: '2022-06-16T03:31:10.016358'
+  minimum: 50.07
+  maximum: 56.24
+  average: 52.55
+  UpdateDay: '2022-06-16T06:30:26.643117'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 35282
+  Rank: 35373
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -105,7 +105,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 33774
+  Rank: 33624
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -115,27 +115,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.62
-  maximum: 46.43
-  average: 41.4
-  UpdateDay: '2022-06-16T03:31:09.761558'
+  minimum: 38.48
+  maximum: 39.47
+  average: 39.02
+  UpdateDay: '2022-06-16T06:31:08.935361'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 33396
+  Rank: 33498
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.33
-  maximum: 50.59
-  average: 46.19
-  UpdateDay: '2022-06-16T03:31:10.496213'
+  minimum: 37.38
+  maximum: 44.68
+  average: 39.86
+  UpdateDay: '2022-06-16T06:30:55.369924'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 32596
+  Rank: 32697
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 31462
+  Rank: 31562
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 31210
+  Rank: 31310
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 29708
+  Rank: 29758
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,22 +189,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 29172
+  Rank: 29222
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.61
-  maximum: 47.52
-  average: 43.94
-  UpdateDay: '2022-06-16T03:30:27.519977'
+  minimum: 39.84
+  maximum: 47.96
+  average: 42.87
+  UpdateDay: '2022-06-16T06:30:26.642581'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 23662
+  Rank: 23713
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -214,57 +214,57 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.32
-  maximum: 50.14
-  average: 42.51
-  UpdateDay: '2022-06-16T03:31:09.710097'
+  minimum: 41.82
+  maximum: 47.74
+  average: 45.66
+  UpdateDay: '2022-06-16T06:31:08.931289'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 22674
+  Rank: 22771
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 41742_920c8caa
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.72
-  maximum: 39.97
-  average: 39.45
-  UpdateDay: '2022-06-16T03:31:09.725590'
+  minimum: 41.32
+  maximum: 51.4
+  average: 46.7
+  UpdateDay: '2022-06-16T06:30:26.662980'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 19833
+  Rank: 19934
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: '18825786'
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 158.4
-  maximum: 169.22
-  average: 164.66
-  UpdateDay: '2022-06-16T03:30:53.222528'
+  minimum: 194.26
+  maximum: 212.55
+  average: 202.56
+  UpdateDay: '2022-06-16T06:31:09.839235'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 17666
+  Rank: 17716
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   type: trojan
   country: "\U0001F1ED\U0001F1F0HK"
   port: 443
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.41
-  maximum: 1050.19
-  average: 375.7
-  UpdateDay: '2022-06-16T03:30:28.461678'
+  minimum: 48.35
+  maximum: 1042.74
+  average: 384.44
+  UpdateDay: '2022-06-16T06:30:27.513659'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17512
+  Rank: 17548
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   type: trojan
@@ -274,12 +274,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 142.34
-  maximum: 155.43
-  average: 148.75
-  UpdateDay: '2022-06-16T03:31:03.806252'
+  minimum: 150.93
+  maximum: 159.92
+  average: 155.87
+  UpdateDay: '2022-06-16T06:31:02.671947'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 16837
+  Rank: 16888
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -294,7 +294,7 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 16462
+  Rank: 16512
 - name: xioix.gq:443@trojan
   server: xioix.gq
   port: 443
@@ -304,25 +304,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 184.78
-  maximum: 185.35
-  average: 185.05
-  UpdateDay: '2022-06-16T03:31:11.057005'
+  minimum: 166.53
+  maximum: 170.56
+  average: 167.87
+  UpdateDay: '2022-06-16T06:31:09.763494'
   PFirstFoundDay: '2022-03-12T03:14:49.943605'
-  Rank: 16057
-- name: fkgfw-prod.i.sxl.cn:443@ss
-  server: fkgfw-prod.i.sxl.cn
-  port: 443
-  type: ss
-  cipher: aes-256-cfb
-  password: E4DNMf73kHPrd8Qq7aqGPf7f
+  Rank: 16109
+- name: s315.s2022.xyz:40385@trojan
+  password: 5a0c130c-31f7-31dc-89c3-5c26865d56f9
+  port: 40385
+  server: s315.s2022.xyz
+  skip-cert-verify: true
+  type: trojan
+  udp: true
+  uuid: 532999bb-ccf1-5bbf-053a-c31ffc4e6a21
   success_rate: 100.0
-  minimum: 6.43
-  maximum: 254.08
-  average: 89.1
-  UpdateDay: '2022-03-24T18:35:12.668742'
-  PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 14882
+  minimum: 71.06
+  maximum: 77.73
+  average: 74.73
+  UpdateDay: '2022-04-28T03:32:03.567971'
+  PFirstFoundDay: '2022-04-28T03:32:03.567976'
+  Rank: 14743
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -349,7 +351,7 @@ proxy-groups:
   - api.mjj-home.com:443@trojan
   - www.nyc3000.ga:443@trojan
   - xioix.gq:443@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
+  - s315.s2022.xyz:40385@trojan
   tolerance: 250
 rule-providers:
   anting:
